--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div>
 
     </div>
-    <img src="imagee.jpg.jfif"alt=" picture">
+    <img src="image.jpg.jfif"alt=" picture">
     
 </body>
 <footer>@Momo2002</footer>
