--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <body>
-    <h1> My Website</h1>
+    <h1> Contact</h1>
     <br />
-    <a href="index.html">Home</a>
-    <br/>
-    
+     <h4>Contact Me</h4>
+<h6>Add</h6> <form>
+Name: <input type="text">
+Email:<input type="email">
+Message:<textarea rows="6" cols="20"></textarea>
+<input type="submit" value="Send">
+
+<br/>
+    <a href="index.html"> Home </a>
+    <br />
+
+    <footer> ©2025 Anika </footer>
 </body>
 </html>
